--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="estilos.css">
   <title>CHORDES</title>
 </head>
-
+<h1>chordes</h1>
 <body>
   <!--navbar-->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
