--- a/teoria.html
+++ b/teoria.html
@@ -10,70 +10,69 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="estilos.css">
-  <title>CHORDES - TEORIA MUSICAL</title>
+  <title>CHORDES - HISTORIA MUSICAL</title>
 </head>
 
+
 <body class="fondoTeoria">
-  <!--navbar-->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="index.html">CHORDES</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+  <div class="container">
+    <!--navbar-->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="index.html">CHORDES</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Contacto</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">
-            Categorias
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Historia</a>
-            <a class="dropdown-item" href="#">Teoria</a>
-            <a class="dropdown-item" href="#">Instrumentos</a>
-            <a class="dropdown-item" href="#">Estilos</a>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contacto.html">Contacto</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              Categorias
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="historia.html">Historia</a>
+              <a class="dropdown-item" href="teoria.html">Teoria</a>
+              <a class="dropdown-item" href="instrumentos.html">Instrumentos</a>
+              <a class="dropdown-item" href="estilos.html">Estilos</a>
 
-          </div>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
-        </li>
-      </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
-    </div>
-  </nav>
-
-  <!--cierre navbar-->
-
-  <div class="row">
-    <div class="col-xl-6 col-md-6 col-sm-12">
-      <h2 class="display-3 text-center text-info pd-2">Notas en piano</h2>
-      <div class="row">
-        <div class="col text-center">
-          <img src="resources/pianoVector.png" class="img-fluid  imagenPianoVector" alt="">
-        </div>
-        
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#">Disabled</a>
+          </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
       </div>
-      <div class="card m-5 p-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit sint magni perferendis at assumenda non mollitia culpa. Modi reprehenderit unde facilis iure molestiae quam error praesentium ipsa cumque. Voluptas, aliquam? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente, laboriosam.</div>
-    </div>
-    <div class="col-xl-6 col-md-6 col-sm-12">
-      <h2 class="display-3 text-center text-info">Notas en guitarra</h2>
-      <div class="card">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit sint magni perferendis at assumenda non mollitia culpa. Modi reprehenderit unde facilis iure molestiae quam error praesentium ipsa cumque. Voluptas, aliquam?</div>
-    </div>
+    </nav>
+
+    <!--cierre navbar-->
+    <!--contenido principal-->
+    <h1 class="display-3 text-info text-center p-3 font-weight-bold">Teoria Musical</h1>
+    <di class="row p-3">
+      <div class="col-xl-6 col-md-6 col-sm-12">
+        <img src="resources/pianoVector.png" alt="" class="img-fluid p-2">
+      </div>
+      <div class="col">
+        <h2 class="display-3 text-center p-2">El piano</h2><br>
+        <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam, aperiam, cupiditate a soluta earum eius ea, odit sint dolores nesciunt sed id alias aliquam. Similique dolores, architecto atque velit eos ad voluptatem alias quia non ratione quae eveniet debitis harum dignissimos dolorum quaerat tenetur, omnis vero laborum autem magnam rerum?</p>
+      </div>
+    </di>
+   
   </div>
+
   <!--footer-->
-  <div class="container-fluid bg-light">
+  <div class="container bg-light">
     <footer class="py-3 my-4">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
         <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
@@ -84,7 +83,8 @@
       </ul>
       <p class="text-center text-muted">© 2021 Company, Inc</p>
     </footer>
-  <!--cierre footer-->
+    <!--cierre footer-->
+  </div>
   </div>
 
   <!-- Optional JavaScript -->
