--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
             data-target="#exampleModal">
             Contactanos
           </button>
-          prueba de actualizacion
+          prueba de actualizacion2
         </div>
       </div>
 
