actualizacion en clases

--- a/index.html
+++ b/index.html
@@ -115,12 +115,21 @@
           </ul>
           <p class="text-center text-muted">© 2021 Company, Inc</p>
         </footer>
-
+        <script>
+          function llamarMensaje(){
+            alert("hola mundo")
+          }
+          function sumar(numero1, numero2){
+            resultado = numero1 + numero2
+            alert("el resultado es " + resultado)
+          }
+        </script>
         
 
       </div>
     </div>
   </div>
+  <button onclick="llamarMensaje()">clik</button>
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
